--- a/app/index.html
+++ b/app/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="keywords" content="teamform, team">
-   <!-- The meta tags *must* come first in the head; any other head content must come *after* these tags -->
-   <title>teamform - A real-time online team forming app</title>
 
-      <!-- libraries and CSS 	  
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="teamform, team">
+  <!-- The meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>teamform - A real-time online team forming app</title>
+
+  <!-- libraries and CSS 	  
 		JQuery: Necessary for some bootstrap interactions (v1.12.4 is used)		
 		Bootstrap: Library and CSS for bootstrap framework (v3.3.7 is used)
 		Font-awesome: More icons for the web development (v4.6.3 is used)		
 		site.css: A customized css for our web application. Not from any web framework. 
    -->
 
-   <script src="lib/jquery.min.js"></script>      
-   <script src="lib/bootstrap.min.js"></script>      
+  <script src="lib/jquery.min.js"></script>
+  <script src="lib/bootstrap.min.js"></script>
 
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">   
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">   
-   <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 
-   <!-- Customized libraries shared by pages -->
-   <script src="js/site.js"></script>
+  <!-- Customized libraries shared by pages -->
+  <script src="js/site.js"></script>
 
   <style>
     .user {
@@ -133,76 +134,80 @@
     }*/
   </style>
 
+
+
 </head>
+
 <body style="background-color: lightblue">
-   
-   <div class="navbar-wrapper">
-		
-      <div class="container">
-         <nav class="navbar navbar-static-top navbar-default">
-            <div class="container">
-               <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" >
+
+  <div class="navbar-wrapper">
+
+    <div class="container">
+      <nav class="navbar navbar-static-top navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+              aria-controls="navbar">
                      <span class="sr-only">Toggle navigation</span>
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#" style="border 100px">NOW3H3R3</a>
-               </div>
-               <div id="navbar" class="navbar-collapse collapse" >
-                  <ul class="nav navbar-nav">
+            <a class="navbar-brand" href="#" style="border 100px">NOW3H3R3</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
 
-                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                           <li><a href="#page_about">NOW3H3R3</a></li>
-                           <li>
-                              <a href="#page_team">The Team</a>
-                           </li>
-                           <li role="separator" class="divider"></li>
-                           <li><a href="#">Event List </a></li>
-						   <li><a href="#">Join/Start a Team </a></li>
-						   <li><a href="#">Updates </a></li>
-                        </ul>
-                     </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#page_about">NOW3H3R3</a></li>
+                  <li>
+                    <a href="#page_team">The Team</a>
+                  </li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Event List </a></li>
+                  <li><a href="#">Join/Start a Team </a></li>
+                  <li><a href="#">Updates </a></li>
+                </ul>
+              </li>
 
-                     <li class="dropdown">
-                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Coverage <span class="caret"></span></a>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Coverage <span class="caret"></span></a>
 
-                       <ul class="dropdown-menu">
-                         <li>
-                           <a href="coverage/index.html" target="_blank">Report</a>
-                        </li>
-                        <li role="separator" class="divider"></li>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="coverage/index.html" target="_blank">Report</a>
+                  </li>
+                  <li role="separator" class="divider"></li>
 
-                        <li>
-                           <a href="unit_tests/test_site.js" target="_blank">test_site.js (sample)</a>
-                        </li>
-
-                        <li><a href="#">TODO: Add more test cases here... </a></li>
-                     </ul>
+                  <li>
+                    <a href="unit_tests/test_site.js" target="_blank">test_site.js (sample)</a>
                   </li>
 
-               </ul>
-            </div>
-         </div>
+                  <li><a href="#">TODO: Add more test cases here... </a></li>
+                </ul>
+              </li>
+
+            </ul>
+          </div>
+        </div>
       </nav>
-   </div>
-</div>
+    </div>
+  </div>
 
-   <!-- Marketing messaging and featurettes
+  <!-- Marketing messaging and featurettes
    ================================================== -->
-   <!-- Wrap the rest of the page in another container to center all the content. -->
-   <div class="container marketing">
+  <!-- Wrap the rest of the page in another container to center all the content. -->
+  <div class="container marketing">
 
-      <div class="row featurette" id="page_about">
+    <div class="row featurette" id="page_about">
 
-         <div class="col-md-12">               
-            <div class="row">
-               <h3 class="text-center">Welcome Username!</h3>
-            </div>
-         </div>
+      <div class="col-md-12">
+        <div class="row">
+          <h3 class="text-center">Welcome Username!</h3>
+        </div>
+      </div>
 
 
       <div class="col-md-12">
@@ -314,16 +319,16 @@
         <input type="submit" value="Send request" onclick="createFunction()">
       </div>
 
-<div id="TeamLeader" class="w3-container  user">
-  <h2>Team Leader</h2>
-  <p>Make a Team</p>
-</div>
+      <div id="TeamLeader" class="w3-container  user">
+        <h2>Team Leader</h2>
+        <p>Make a Team</p>
+      </div>
 
-<div id="Member" class="w3-container  user">
-  <h2>Member</h2>
-  <p>Be a Member</p>
-</div>
- 
+      <div id="Member" class="w3-container  user">
+        <h2>Member</h2>
+        <p>Be a Member</p>
+      </div>
+
 </body>
 
 
@@ -332,9 +337,9 @@
 <!-- FOOTER -->
 <hr>
 <footer>
-   <p class="pull-right"><a href="#">Back to top</a></p>
-   <p>&copy; 2017 NOW3H3R3 </p>
-   <p>Powered by <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></p>
+  <p class="pull-right"><a href="#">Back to top</a></p>
+  <p>&copy; 2017 NOW3H3R3 </p>
+  <p>Powered by <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></p>
 </footer>
 </div>
 <!-- /.container -->
@@ -365,4 +370,5 @@ $("form").submit(function (e) {
 </script>
 
 </body>
+
 </html>
