sorry accidentally overwrote it

--- a/index_with_template.html
+++ b/index_with_template.html
@@ -86,12 +86,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Here's our suggestions for you !</h2>
+                    <h2 class="section-heading">HOW TO USE THIS TOOL?</h2>
                     <hr class="light">
-                    <p class="text-faded">Based on your preference and experience, we find out some events and teams for you !</p>
-                    <p> // add some pictures or list here  </p>
-                    <p class="text-faded">Not interested in these? Check out more</p>
-                    <a href="#on-going" class="page-scroll btn btn-default btn-xl sr-button">What's more!</a>
+                    <p class="text-faded">We have made a tutorial for you!</p>
+                    <p>//embed a youtube video</p>
+                    <a href="#on-going" class="page-scroll btn btn-default btn-xl sr-button">Ready To Start!</a>
                 </div>
             </div>
         </div>
