--- a/app/index_with_template.html
+++ b/app/index_with_template.html
@@ -1,9 +1,6 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -162,9 +159,9 @@
                 <h1 id="homeHeading">Helping you to form the most suitable team</h1>
                 <hr>
                 <p>NOW3H3R3 is an place where you can find your favourite team.  All we want to do is to help you form the team that suits you!</p>
-                <a href="#suggestions" class="btn btn-primary btn-xl page-scroll">What we suggests</a>                
+                <a href="#suggestions" class="btn btn-primary btn-xl page-scroll">What we suggest</a>                
             </div>
-            <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="true" data-auto-logout-link="false"></div>
+            <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false"></div>
         </div>
     </header>
 
@@ -899,4 +896,3 @@
 </body>
 
 </html>
->>>>>>> 69bc4da8c9ed9700c1d043a35428645ecc46dbfa
