--- a/app/member.html
+++ b/app/member.html
@@ -30,7 +30,7 @@
    </head>
    <body>
 
-   <a href="index.html"
+   <a href="index_with_template.html"
    <button id="btn_admin" type="button" class="btn btn-primary" >Back to the front-end</button></a>
 
    <br>
