--- a/app/team.html
+++ b/app/team.html
@@ -30,7 +30,7 @@
    </head>
    <body>
 
-    <a href="index.html"
+    <a href="index_with_template.html"
    <button id="btn_admin" type="button" class="btn btn-primary" >
    <span class="glyphicon glyphicon-backward" aria-hidden="true"></span>
    Back</button></a>
