changed simple layout

--- a/app/index_with_template.html
+++ b/app/index_with_template.html
@@ -32,6 +32,7 @@
     <link href="css/modal.css" rel="stylesheet">
     <link href="css/video.css" rel="stylesheet">
     <link href="css/box.css" rel="stylesheet">
+    <link href="css/creative.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -80,9 +81,6 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#create">Create</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact Us</a>
@@ -293,6 +291,17 @@
             </div>
         </div>
     </section>
+    
+
+    <section class="bg-dark">
+        <div class="container text-center">
+            <!--<div class="call-to-action">-->
+                <div>
+                <h2>Can't find any interested?</h2>
+                <a href="#create" class="page-scroll btn btn-default btn-xl sr-button">Create Now</a>
+            </div>
+        </div>
+    </section>
 
     <section id="create">
         <div class="container">
@@ -449,16 +458,7 @@
         </div>
     </section>-->
 
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
-            </div>
-        </div>
-    </aside>
-
-    <section id="contact">
+    <section id="contact" class="bg-lightblue">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
