removeal of page

--- a/app/index_with_template.html
+++ b/app/index_with_template.html
@@ -108,19 +108,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">HOW TO USE THIS TOOL?</h2>
+                    <h2 class="section-heading">HOW?</h2>
                     <hr class="light">
-                    <p class="text-faded">We have made a tutorial for you!</p>
+                
                     <div class="video-container">
                         <iframe width="854" height="480" src="https://www.youtube.com/embed/L0MK7qz13bU" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p></p>
-                    <a href="#suggestions" class="page-scroll btn btn-default btn-xl sr-button">See our suggestions</a>
+                    <a href="#suggestions" class="page-scroll btn btn-default btn-xl sr-button">Join an event</a>
                 </div>
             </div>
         </div>
     </section>
 
+<!--
     <section class="bg-dark" id="suggestions">
         <div class="container">
             <div class="row">
@@ -129,11 +130,11 @@
                     <hr class="light">
                     <p class="text-faded">According to the questionnares... You may be interested in these events</p>
 
-                    <!--<ul class="photos">
+                    <ul class="photos">
                         <li><img src="img/portfolio/thumbnails/2.jpg" width="50%" height="50%" </li>
                         <li><img src="img/portfolio/thumbnails/3.jpg" width="50%" height="50%" </li>
                         <li><img src="img/portfolio/thumbnails/4.jpg" width="50%" height="50%" </li>
-                    </ul>-->
+                    </ul>
 
 
                     <div class="container-fluid">
@@ -193,6 +194,7 @@
             </div>
         </div>
     </section>
+-->
 
 
     <section class="no-padding" id="on-going">
