Minor changes on Homepage
Just changed some words and layout.

--- a/app/index_with_template.html
+++ b/app/index_with_template.html
@@ -75,7 +75,7 @@
                         <a class="page-scroll" href="#create">Create</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact Us</a>
+                        <a class="page-scroll" href="#contact">Development Team</a>
                     </li>
                 </ul>
             </div>
@@ -87,10 +87,13 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Helping you to form the most suitable team</h1>
+                <h1 id="homeHeading">Helping you to form
+                    <br>
+                    the most suitable team</h1>
                 <hr>
-                <p>NOW3H3R3 is an place where you can find your favourite team. All we want to do is to help you form the team
-                    that suits you!</p>
+                <p>NOW3H3R3 is an place where you can find your favourite team.
+                    <br>
+                     All we want to do is to help you form the team that suits you!</p>
                 <a href="#tutorial" class="btn btn-primary btn-xl page-scroll">Let's start !</a>
             </div>
         </div>
