--- a/app/index.html
+++ b/app/index.html
@@ -66,16 +66,19 @@
                         <a class="page-scroll" href="#tutorial">Tutorial</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#suggestions">Suggestions</a>
+                        <a class="page-scroll" href="events.html"> Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#on-going">On-going Events</a>
+                        <a class="page-scroll" href="admin.html">Create event</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#create">Create</a>
+                        <a class="page-scroll" href="team.html">Start a team</a>
+                    </li>
+                     <li>
+                        <a class="page-scroll" href="member.html">Join a team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact Us</a>
+                        <a class="page-scroll" href="#about">About Us</a>
                     </li>
                 </ul>
             </div>
