--- a/app/index.html
+++ b/app/index.html
@@ -462,7 +462,7 @@
                 </div>
                 <div class="col-xs-6 col-md-3">
                     <div class="thumbnail text-center">
-                        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=member2&w=150&h=150" style="width:304px;height:228px;border:0;"
+                        <img src="pic/Nicola.jpg" style="width:304px;height:228px;border:0;"
                             class="img-circle img-responsive">
                         <div class="caption">
                             <h4>Nicola Yip</h4>
@@ -475,7 +475,7 @@
 
                 <div class="col-xs-6 col-md-3">
                     <div class="thumbnail text-center">
-                        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=member2&w=150&h=150" style="width:304px;height:228px;border:0;"
+                        <img src="pic/James.JPG" style="width:304px;height:228px;border:0;"
                             class="img-circle img-responsive">
                         <div class="caption">
                             <h4>James Twisleton</h4>
@@ -487,7 +487,7 @@
 
                 <div class="col-xs-6 col-md-3">
                     <div class="thumbnail text-center">
-                        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=member2&w=150&h=150" style="width:304px;height:228px;border:0;"
+                        <img src="pic/John.JPG" style="width:304px;height:228px;border:0;"
                             class="img-circle img-responsive">
                         <div class="caption">
                             <h4>Leung Kung Ming</h4>
@@ -499,7 +499,7 @@
 
                 <div class="col-xs-6 col-md-3">
                     <div class="thumbnail text-center">
-                        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=member2&w=150&h=150" style="width:304px;height:228px;border:0;"
+                        <img src="pic/Brian.JPG" style="width:304px;height:228px;border:0;"
                             class="img-circle img-responsive">
                         <div class="caption">
                             <h4>Wong Heng Kwong</h4>
@@ -513,7 +513,8 @@
                 <div class="col-xs-6 col-md-3">
                     <div class="thumbnail text-center">
 
-                        <img id="myImg" src="pic/msluk.jpg" alt=" " width="300" height="200">
+                        <img id="myImg" src="pic/msluk.jpg" style="width:304px;height:228px;border:0;"
+                            class="img-circle img-responsive">
 
                         <!-- The Modal -->
                         <div id="myModal" class="modal">
