--- a/app/index.html
+++ b/app/index.html
@@ -502,7 +502,7 @@
 
                 <div class="col-xs-6 col-md-3">
                     <div class="thumbnail text-center">
-                        <img src="pic/Brian.JPG" style="width:304px;height:228px;border:0;"
+                        <img src="pic/thomas.JPG" style="width:304px;height:228px;border:0;"
                             class="img-circle img-responsive">
                         <div class="caption">
                             <h4>Wong Heng Kwong</h4>
