--- a/app/createteam.html
+++ b/app/createteam.html
@@ -69,13 +69,13 @@
                         <a class="page-scroll" href="events.html"> Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="admin.html">Create event</a>
+                        <a class="page-scroll" href="createevent.html">Create event</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="team.html">Start a team</a>
+                        <a class="page-scroll" href="createteam.html">Start a team</a>
                     </li>
                      <li>
-                        <a class="page-scroll" href="member.html">Join a team</a>
+                        <a class="page-scroll" href="createmember.html">Join a team</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About Us</a>
