--- a/app/createevent.html
+++ b/app/createevent.html
@@ -94,7 +94,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Create Your Own Event</h2>
                     <hr class="primary">
-                    <input id="input_text" type="text" class="input-lg">
+                    <input id="input_text" type="text" class="input-lg"  style=color:black>
                     <br>
                     <em>Enter a name (e.g. COMP3111-L1, COMP3111-L2 or COMP3111H) to create an event</em>
                     <br>
