--- a/app/createmember.html
+++ b/app/createmember.html
@@ -94,7 +94,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Join as a member</h2>
                     <hr class="primary">
-                    <input id="input_text" type="text" class="input-lg">
+                    <input id="input_text" type="text" class="input-lg"  style=color:black>
                     <br>
                     <em>Enter a name of an event to take part in as a member</em>
                     <br>
