--- a/app/createteam.html
+++ b/app/createteam.html
@@ -94,7 +94,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Create your own team for an event</h2>
                     <hr class="primary">
-                    <input id="input_text" type="text" class="input-lg">
+                    <input id="input_text" type="text" class="input-lg"  style=color:black>
                     <br>
                     <em>Enter the name of an event to make a team for</em>
                     <br>
