--- a/app/index.html
+++ b/app/index.html
@@ -261,15 +261,15 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/7.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/7.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Event
+                                    COMP3111 Fall
                                 </div>
                                 <div class="project-name">
-                                    // Event Category 1
+                                    #UST COMP projects
                                 </div>
                             </div>
                         </div>
@@ -281,10 +281,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Event
+                                    ELEC2711 Fall
                                 </div>
                                 <div class="project-name">
-                                    // Event Category 2
+                                    #UST ELEC projects
                                 </div>
                             </div>
                         </div>
@@ -296,10 +296,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Event
+                                    UST Hackaton 2016 fall
                                 </div>
                                 <div class="project-name">
-                                    // Event Category 3
+                                    #coding
                                 </div>
                             </div>
                         </div>
@@ -311,10 +311,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Event
+                                    TWO-MAN spicy challenge
                                 </div>
                                 <div class="project-name">
-                                    // Event Category 4
+                                    #eating contest
                                 </div>
                             </div>
                         </div>
@@ -326,10 +326,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Event
+                                    Make a difference 2016
                                 </div>
                                 <div class="project-name">
-                                    // Event Category 5
+                                    #startups
                                 </div>
                             </div>
                         </div>
@@ -341,10 +341,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Event
+                                    Tech hack 101
                                 </div>
                                 <div class="project-name">
-                                    // Event Category Others
+                                    #startups
                                 </div>
                             </div>
                         </div>
@@ -505,7 +505,7 @@
                 
                 <div class="col-xs-6 col-md-3">
                     <div class="thumbnail text-center"style="background-color:#F05F40">
-                        <img src="pic/Nicola.jpg"  style="width:250px;height:250px;border:0;"
+                        <img src="pic/Nicola.jpg"  style="width:150px;height:150px;border:0;"
                             class="img-circle img-responsive">
                         <div class="caption">
                             <h4>Nicola Yip</h4>
@@ -518,7 +518,7 @@
 
                 <div class="col-xs-6 col-md-3">
                     <div class="thumbnail text-center" style="background-color:#F05F40">
-                        <img src="pic/James.JPG" style="width:250px;height:250px;border:0;"
+                        <img src="pic/James.JPG" style="width:150px;height:150px;border:0;"
                             class="img-circle img-responsive">
                         <div class="caption">
                             <h4>James Twisleton</h4>
@@ -530,7 +530,7 @@
 
                 <div class="col-xs-6 col-md-3">
                     <div class="thumbnail text-center"style="background-color:#F05F40">
-                        <img src="pic/John.JPG" style="width:250px;height:250px;border:0;"
+                        <img src="pic/John.JPG" style="width:150px;height:150px;border:0;"
                             class="img-circle img-responsive">
                         <div class="caption">
                             <h4>Leung Kung Ming</h4>
@@ -543,7 +543,7 @@
                 <div class="col-xs-6 col-md-3">
 
                     <div class="thumbnail text-center"style="background-color:#F05F40">
-                        <img src="pic/Brian.JPG" style="width:250px;height:250px;border:0;"
+                        <img src="pic/Brian.JPG" style="width:150px;height:150px;border:0;"
 
                             class="img-circle img-responsive">
                         <div class="caption">
@@ -558,7 +558,7 @@
                 <div class="col-xs-6 col-md-3">
                     <div class="thumbnail text-center"style="background-color:#F05F40">
 
-                        <img id="myImg" src="pic/msluk.jpg" style="width:250px;height:250px;border:0;"
+                        <img id="myImg" src="pic/msluk.jpg" style="width:150px;height:150px;border:0;"
                             class="img-circle img-responsive">
 
                         <!-- The Modal -->
