--- a/app/index.html
+++ b/app/index.html
@@ -559,7 +559,7 @@
                 <div class="col-xs-3 col-md-4">
 
                     <div class="thumbnail text-center"style="background-color:#F05F40">
-                        <img src="pic/Brian.JPG" style="width:150px;height:150px;border:0;"
+                        <img src="pic/thomas.JPG" style="width:150px;height:150px;border:0;"
 
                             class="img-circle img-responsive">
                         <div class="caption">
