--- a/app/createmember.html
+++ b/app/createmember.html
@@ -108,7 +108,7 @@
 
         
 
-                        <button id="btn_member" type="button" class="btn btn-primary">Member</button>
+                        <button id="btn_member" type="button" class="btn btn-primary">Next</button>
                     </div>
                 </div>
             </div>
