--- a/app/events.html
+++ b/app/events.html
@@ -93,22 +93,25 @@
             <!-- /.container-fluid -->
           </nav>
 
-          <section class="bg-primary" id="Page Title">
+      
+                             <header>
+                <div class="header-content">
+            <div class="header-content-inner">
+      
+
             <div class="container">
               <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <h2 class="section-heading">Administrative Page</h2>
+                  <h2 class="section-heading">Check out our current events:</h2>
                 </div>
               </div>
-            </div>
-          </section>
-
+                </div>
           <section id="Create">
 
             <div id="events_page_controller" ng-controller="EventsCtrl">
              <div class="row">
              <div class="col-md-6 col-xs-6 text-right" >
-                <h3>Check out our current eventscurrent events:</h3>
+                <h3></h3>
                 <ul ng-repeat="e in event">
                   <li>
                     {{e.$id}}
@@ -117,7 +120,6 @@
               </div>
             </div>
           </div>
-        </div>
 
         <!-- jQuery -->
         <script src="vendor/jquery/jquery.min.js"></script>
