--- a/app/events.html
+++ b/app/events.html
@@ -108,7 +108,7 @@
             <div id="events_page_controller" ng-controller="EventsCtrl">
              <div class="row">
              <div class="col-md-6 col-xs-6 text-right" >
-                <h3>Check out our current eventscurrent events:</h3>
+                <h3>Check out our current events</h3>
                 <ul ng-repeat="e in event">
                   <li>
                     {{e.$id}}
