--- a/app/member.html
+++ b/app/member.html
@@ -190,75 +190,70 @@
                  </div>
 
                </div><div class="form-group">
-                 <label for="inputWord7" class="col-sm-3 control-label">Dogs</label>
-                 <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord7" ng-model="word7">
-                 </div>
+               <label for="inputWord7" class="col-sm-3 control-label">Dogs</label>
+               <div class="col-sm-9">
+                 <input type="checkbox" class="form-control" id="inputWord7" ng-model="word7">
                </div>
+             </div>
 
-               </div><div class="form-group">
-                 <label for="inputWord8" class="col-sm-3 control-label">Flamboyant</label>
-                 <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord8" ng-model="word8">
-                 </div>
+             <div class="form-group">
+               <label for="inputWord8" class="col-sm-3 control-label">Flamboyant</label>
+               <div class="col-sm-9">
+                 <input type="checkbox" class="form-control" id="inputWord8" ng-model="word8">
                </div>
+             </div>
 
-               </div><div class="form-group">
-                 <label for="inputWord9" class="col-sm-3 control-label">Foodie</label>
-                 <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord9" ng-model="word9">
-                 </div>
+             <div class="form-group">
+               <label for="inputWord9" class="col-sm-3 control-label">Foodie</label>
+               <div class="col-sm-9">
+                 <input type="checkbox" class="form-control" id="inputWord9" ng-model="word9">
                </div>
+             </div>
 
-              </div><div class="form-group">
-                 <label for="inputWord10" class="col-sm-3 control-label">Fun</label>
-                 <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord10" ng-model="word10">
-                 </div>
+             <div class="form-group">
+               <label for="inputWord10" class="col-sm-3 control-label">Fun</label>
+               <div class="col-sm-9">
+                 <input type="checkbox" class="form-control" id="inputWord10" ng-model="word10">
                </div>
+             </div>
 
-               </div><div class="form-group">
-                 <label for="inputWord11" class="col-sm-3 control-label">Gender balance</label>
-                 <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord11" ng-model="word11">
-                 </div>
+             <div class="form-group">
+               <label for="inputWord11" class="col-sm-3 control-label">Gender balance</label>
+               <div class="col-sm-9">
+                 <input type="checkbox" class="form-control" id="inputWord11" ng-model="word11">
                </div>
+             </div>
 
-               </div><div class="form-group">
-                 <label for="inputWord12" class="col-sm-3 control-label">Proactive</label>
-                 <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord12" ng-model="word12">
-                 </div>
+             <div class="form-group">
+               <label for="inputWord12" class="col-sm-3 control-label">Proactive</label>
+               <div class="col-sm-9">
+                 <input type="checkbox" class="form-control" id="inputWord12" ng-model="word12">
                </div>
+             </div>
 
-               </div><div class="form-group">
-                 <label for="inputWord13" class="col-sm-3 control-label">Punctuality</label>
-                 <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord13" ng-model="word13">
-                 </div>
+             <div class="form-group">
+               <label for="inputWord13" class="col-sm-3 control-label">Punctuality</label>
+               <div class="col-sm-9">
+                 <input type="checkbox" class="form-control" id="inputWord13" ng-model="word13">
                </div>
+             </div>
 
-               </div><div class="form-group">
-                 <label for="inputWord14" class="col-sm-3 control-label">Traditional</label>
-                 <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord14" ng-model="word14">
-                 </div>
+             <div class="form-group">
+               <label for="inputWord14" class="col-sm-3 control-label">Traditional</label>
+               <div class="col-sm-9">
+                 <input type="checkbox" class="form-control" id="inputWord14" ng-model="word14">
                </div>
+             </div>
 
-               </div><div class="form-group">
-                 <label for="inputWord15" class="col-sm-3 control-label">Dogs</label>
-                 <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord15" ng-model="word15">
-                 </div>
+             <div class="form-group">
+               <label for="inputWord15" class="col-sm-3 control-label">Dogs</label>
+               <div class="col-sm-9">
+                 <input type="checkbox" class="form-control" id="inputWord15" ng-model="word15">
                </div>
+             </div>
 
 
 
-
-
-
-
-             </form>
 
              <div class="row text-left">
 
@@ -277,8 +272,13 @@
 
 
             </div>
-            <div class="col-md-2 col-xs-2"></div>
-          </div>
+
+
+          </form>
+
+
+          <div class="col-md-2 col-xs-2"></div>
+        </div>
 
 
 <!--
