--- a/app/index_with_template.html
+++ b/app/index_with_template.html
@@ -13,7 +13,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>NOW3H3R3 - TEAM FORMING PLATFORM</title>
+    <title>NOW3H3R3 CHANGED- TEAM FORMING PLATFORM</title>
     <link rel="icon" type="image/x-icon" href="pic/n14.ico" />
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
