--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,7 @@
                         <a class="page-scroll" href="createevent.html">Create event</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="createteam.html">Start a team</a>
+                        <a class="page-scroll" href="createteam.html">Start/Manage a team</a>
                     </li>
                      <li>
                         <a class="page-scroll" href="createmember.html">Join a team</a>
