--- a/app/member.html
+++ b/app/member.html
@@ -249,7 +249,7 @@
              </div>
 
 
-
+ <!--             <button type="button" class="btn btn-primary" ng-click="matchFunc();" >Find a match!</button> -->
 
 
                     
