--- a/app/member.html
+++ b/app/member.html
@@ -209,42 +209,42 @@
 
                  <label for="inputWord7" class="col-sm-3 control-label">Dogs</label>
                  <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord7" ng-model="word7">
+                   <input type="checkbox" class="form-control" id="inputWord8" ng-model="word8">
                  </div>
 
                  <label for="inputWord8" class="col-sm-3 control-label">Flamboyant</label>
                  <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord8" ng-model="word8">
+                   <input type="checkbox" class="form-control" id="inputWord9" ng-model="word9">
                  </div>
 
                  <label for="inputWord9" class="col-sm-3 control-label">Foodie</label>
                  <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord9" ng-model="word9">
+                   <input type="checkbox" class="form-control" id="inputWord10" ng-model="word10">
                  </div>
 
                  <label for="inputWord10" class="col-sm-3 control-label">Fun</label>
                  <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord10" ng-model="word10">
+                   <input type="checkbox" class="form-control" id="inputWord11" ng-model="word11">
                  </div>
 
                  <label for="inputWord11" class="col-sm-3 control-label">Genderbalance</label>
                  <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord11" ng-model="word11">
+                   <input type="checkbox" class="form-control" id="inputWord12" ng-model="word12">
                  </div>
 
                  <label for="inputWord12" class="col-sm-3 control-label">Proactive</label>
                  <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord12" ng-model="word12">
+                   <input type="checkbox" class="form-control" id="inputWord13" ng-model="word13">
                  </div>
 
                  <label for="inputWord13" class="col-sm-3 control-label">Punctuality</label>
                  <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord13" ng-model="word13">
+                   <input type="checkbox" class="form-control" id="inputWord14" ng-model="word14">
                  </div>
 
                  <label for="inputWord14" class="col-sm-3 control-label">Rules</label>
                  <div class="col-sm-9">
-                   <input type="checkbox" class="form-control" id="inputWord14" ng-model="word14">
+                   <input type="checkbox" class="form-control" id="inputWord15" ng-model="word15">
                  </div>
                </div>
 
@@ -265,7 +265,7 @@
              <div class="row text-left">
              -->
              <div class="form-group">
-               <label for="inputName" class="col-sm-3 control-label">RESULT</label>
+               <label for="inputName" class="col-sm-3 control-label">Compatability Score </label>
                <div class="col-sm-9">
                <textarea rows="5" class="form-control" id="result" ng-model="resultString" placeholder="result"></textarea>
                </div>
