--- a/app/events.html
+++ b/app/events.html
@@ -100,7 +100,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <h2 class="section-heading">Check out our current events:</h2>
+                  <h2 class="section-heading">Check out our current events!</h2>
                 </div>
               </div>
                 </div>
@@ -109,7 +109,7 @@
             <div id="events_page_controller" ng-controller="EventsCtrl">
              <div class="row">
              <div class="col-md-6 col-xs-6 text-right" >
-                <h3>Check out our current events</h3>
+
                 <h3></h3>
                 <ul ng-repeat="e in event">
                   <li>
