--- a/app/events.html
+++ b/app/events.html
@@ -191,7 +191,7 @@ Let's continue to make history together.
                            
                            
                     <label for="exampleInputEmail1">Name</label>
-                      <input type="email" class="form-control"
+                      <input type="text" class="form-control"
                       id="exampleInputEmail1" placeholder="Name"/>
                   </div>
                   <div class="form-group">
